# apk-proofs

bw6/: Cargo.toml
bw6/benches/: bench.rs
bw6/examples/: recursive.rs
bw6/sol/: Verifier.sol
bw6/src/: bitmask.rs  fsrng.rs  generator.rs  lib.rs  prover.rs  setup.rs  test_helpers.rs  transcript.rs  utils.rs  verifier.rs
bw6/src/bls/: mod.rs
bw6/src/piop/: affine_addition.rs  bitmask_packing.rs
