[package]
name = "apk-proofs"
version = "0.1.0"
authors = ["Sergey Vasilyev <swasilyev@gmail.com>"]
edition = "2018"
description = "Succinct proofs of a BLS public key being an aggregate key of a subset of signers given a commitment to the set of all signers' keys"
repository = "https://github.com/w3f/apk-proofs"
categories = ["cryptography"]

[dependencies]
ark-std = { version = "0.4.0-alpha", default-features = false }
ark-ff = { version = "0.4.0-alpha", default-features = false }
ark-ec = { version = "0.4.0-alpha", default-features = false }
ark-poly = { version = "0.4.0-alpha", default-features = false }
ark-serialize = { version = "0.4.0-alpha", default-features = false, features = ["derive"] }

ark-bw6-761 = { version = "0.4.0-alpha.2", default-features = false }
ark-bls12-377 = { version = "0.4.0-alpha.2", default-features = false, features = ["curve"] }

fflonk = { git = "https://github.com/w3f/fflonk" }

rand = "0.8"
merlin = "3.0"
sha2 = "0.10.6"
rayon = { version = "1", optional = true }
tiny-keccak = { version = "2.0", features = ["keccak"] }
rand_core = { version = "0.6", default-features = false }
tinytemplate = "1.2.1"
serde = { version = "1.0.188", features = ["derive"] }
serde-hex = "0.1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[[example]]
name = "recursive"

[[test]]
name = "basic"
harness = false

[[test]]
name = "packed"
harness = false

[[test]]
name = "counting"
harness = false

[features]
default = []
std = ["ark-std/std", "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-serialize/std", "rand_core/std"]
parallel = ["std", "ark-std/parallel", "ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "fflonk/parallel", "rayon"]
print-trace = ["ark-std/print-trace"]
gen-sol= ["std"]
